2008-05-19 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (pic16_emitpLabel,pic16_emitpLabelFORCE):
	  fixed duplicate labels (#1911325)

2008-05-19 Raphael Neider <rneider AT web.de>

	* src/regression/empty.c: suppress warning
	* src/regression/pointer1.c: enabled index_by_pointer()
	* src/regression/inline.c: now works for pic16 as well

	* src/pic16/device.c: include dbuf declarations
	* src/pic16/device.h: removed obsolete prototypes

	* src/pic16/gen.c, src/pic16/gen.h: moved generic pointer tags
	* src/pic16/glue.c: made purely local functions static,
	  (pic16_printGPointerType, pic16_printIvalCharPtr,
	  pic16_printIvalFuncPtr, pic16_printIvalPtr): fixed initialized
	  generic pointers' tags (#1961866)

	* src/pic16/pcode.c (assignValnums): optimize literal assignments

2008-05-19 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: remove uninstall.exe after uninstallation,
	  fixed typo, uninstall include/pic16/pic16devices.txt

2008-05-18 Borut Razem <borut.razem AT siol.net>

	* support/Utils/dbuf_string.[ch]: added dbuf_chomp(),
	  the buffer is null terminated
	* src/device/pic16.c:
	  applied modified patch 1965676: Patch for Win32 16 bit PIC
	* sdcc_vc_in.h: defined YY_NO_UNISTD_H

2008-05-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCC.lex (check_type),
	* src/SDCC.y (type_specifier2 TYPE_NAME): fixed bug 1925942
	* as/hc08/clean.mk,
	* as/mcs51/clean.mk,
	* as/z80/clean.mk: also clean *.dep
	* device/lib/pic16/libsdcc/stack/Makefile,
	* sim/ucsim/libtool: removed as they are rebuild by configure
	* src/clean.mk: removed izt, so Makefile is not deleted for distclean

2008-05-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (fixupInline, createFunction): save currBlockno in
	  fixupInline instead of createFunction to fix bug 1864577
	  (inlineFindMaxBlockno): removed, use global blockNo
	* src/SDCCglobl.h: added blockNo
	* src/z80/peep.c,
	* src/z80/peep.h: modified properties